[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["Tariq Zeyad Sharaia <tariq.z.sharaia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.4"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
black = "^21.11b0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
